--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,8 +6,12 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        VictorMonoNFP-Regular
-bold_font          VictorMonoNFP-Bold
+font_family         JetBrainsMono Nerd Font Regular
+bold_font           JetBrainsMono Nerd Font Bold
+italic_font         JetBrainsMono Nerd Font Italic
+bold_italic_font    JetBrainsMono Nerd Font Bold Italic
+#font_family        VictorMonoNFP-Regular
+#bold_font          VictorMonoNFP-Bold
 # italic_font      auto
 # bold_italic_font auto
 
