some tmuxy stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,12 +21,11 @@ bind -r m resize-pane -Z
 
 unbind %
 unbind h
-bind h split-window -v -c "#{pane_current_path}"
-
 unbind '"'
-bind v split-window -h -c "#{pane_current_path}"
-
 unbind 'c'
+
+bind b split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 ############################################################
 
@@ -35,12 +34,19 @@ setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
+
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 ############################################################
 
 # tmux plugin setup
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'omerxx/tmux-sessionx'
 set -g @tmux-gruvbox 'light'
 
 run '~/.tmux/plugins/tpm/tpm'
@@ -65,3 +71,5 @@ setw -g window-status-current-format "#[fg=colour0,bg=colour215,nobold,noitalics
 set -s escape-time 0
 set -g focus-events on
 ############################################################
+
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
