add zoxide, and fix tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 set -g mouse on
 
@@ -72,4 +73,3 @@ set -s escape-time 0
 set -g focus-events on
 ############################################################
 
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
